--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@
     cursor: pointer;
 }
 .item:hover{
-    color: black;
-    background-color: white;
+   
+    background-color: red;
 
 }
 .banner-i{
@@ -35,11 +35,33 @@
 }
 
 .banner-container{
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items:center ;
     /* height: 500px; */
     height: 100vh;
     border: 2px solid gray;
-background-image: url("./images/background.png"),linear-gradient();
+background-image: url("./images/background.png"),linear-gradient(45deg,#000,#000);
+}
+.title{
+    font-size: 55px;
+    font-weight: bold;
+}
+.description{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.btn{
+    padding: 10px 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+.btn:hover{
+    background-color: white;
+    color: black;
+    cursor: pointer;
 }
